copy-on-write, copy partial, IntStack, IntArrayList